Updated GUI & Added Library Usage
# Description
## Animator Value Extraction Window
- Removed the parameters group box container and replaced it with a scroll view container. Now, long lists of parameters can be viewed.
- Added a header to inform the user of each section of a parameter option.
- Added a label to the parameter options to include their type.
- Changed the parameter options to match the new format using the header.
- Added "Assets" as the default destination path for the created objects.
- Added serialisation of the references to have editor persistence during script recompilations.
- Added tracking of the selected animator controller for changes to update the window to match the new state.

## Known Issues
- Handling the update of the animator field directly instead of tracking the property.
- Readding the parameters every time the selected animator controller is changed.

--- a/JanitoAnimationPackage/Editor/AnimatorValueExtractionWindow/AnimatorValueExtractionWindow.uss
+++ b/JanitoAnimationPackage/Editor/AnimatorValueExtractionWindow/AnimatorValueExtractionWindow.uss
@@ -18,3 +18,30 @@
     display: none;
     visibility: hidden;
 }
+
+.sectiontitle {
+    background-color: rgb(67, 67, 67);
+    justify-content: center;
+    align-self: flex-start;
+    align-content: center;
+    border-left-color: rgb(0, 0, 0);
+    border-right-color: rgb(0, 0, 0);
+    border-left-width: 0;
+    border-right-width: 1px;
+    -unity-font-style: normal;
+    font-size: 12px;
+    border-top-width: 0;
+    border-bottom-width: 1px;
+    border-top-color: rgba(0, 0, 0, 0);
+    border-bottom-color: rgb(0, 0, 0);
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 1px;
+    border-bottom-left-radius: 1px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 0;
+    -unity-text-align: upper-left;
+    padding-left: 5px;
+    padding-right: 5px;
+}
